@@ -54,6 +54,7 @@ Minor features
  * ``ChoiceBlock`` now accepts a callable as the choices list (Mikalai Radchuk)
  * Redundant action buttons are now omitted from the root page in the explorer (Nick Smith)
  * Locked pages are now disabled from editing at the browser level (Edd Baldry)
+ * Added :meth:`wagtail.wagtailcore.query.PageQuerySet.in_site` method for filtering page querysets to pages within the specified site (Chris Rogers)
 
 
 Bug fixes
